# ATS

./: .gitignore  README.md  app.py  pyproject.toml  start.bat
src/ats_simulator/: __init__.py  cli.py  core.py  parsers.py
tests/: test_core.py  test_parsers.py
